--- a/배포.md
+++ b/배포.md
@@ -8,7 +8,7 @@
 
 - 서버 대여 - [vultr](https://www.vultr.com/)
   - docker, ubuntu 18.04 x64
-- 인증서 무료 발급 - [내도메인.한국](내도메인.한국)
+- 도메인 무료 발급 - [내도메인.한국](내도메인.한국)
   - 만료 30일 전 도메인 설정 창에 연장 기능이 활성화
 - 도메인을 선택하고 ip를 서버와 연결
 
